2012-01-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_name/include/yarp/name/all.h: commit missing catch-all
	file for name service.

	* src/doc/yarp_with_ros.dox: fix typo [thanks Zhenli Lu],
	"yarp read topic://chatter /read" -> "yarp read /read topic://chatter"

	* example/external/python/find_name_server.py: strip quote character

	* example/external/c/yarpmin.c: fix text-mode buffering

	* example/external/c/yarpmin.h: summarize methods

2012-01-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_math/src/math.cpp: recent changes give signed/unsigned
	problems; fix for Linux.

2012-01-25 Lorenzo Natale <lorenzo.natale@iit.it>
    * Various fixes for correct dll generation on WIN32
    * re-tagging rc 2.3.15

2012-01-25 Lorenzo Natale <lorenzo.natale@iit.it>
    * tagging rc 2.3.15

2012-01-23  Andrea Del Prete  <andrea.delprete@iit.it>

    * src\libYARP_sig\include\yarp\sig\Vector.h: add constructor with default value
    * src\libYARP_math\include\yarp\math\Math.h: 
    * src\libYARP_math\src\math.cpp: 
        - add operator '+' to sum scalar to vector and viceversa
        - add operator '-' to subtract scalar to vector and viceversa
        - add operators +=, -=, *=, /= for all operations between vectors, matrices, scalars
        - add method ones that returns a vector with all ones
        - add method eye: takes 1 param and builds square identity matrix
        - add overloading method cat: build a vector from 3/4/5 scalar values
    * src\libYARP_math\include\yarp\math\SVD.h: documentation improved
    * src\libYARP_math\src\SVD.cpp: method pinv optimized
    * src\libYARP_math\harness\MathTest.cpp: add tests on new operators
    * src\libYARP_math\harness\svdTest.cpp: add test on pinv
    
2012-01-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/web/web_test.cpp: update example to show streaming
	web content

	* src/libYARP_OS/src/HttpCarrier.cpp: add streaming web 
	content [thanks Juan G Victores]
